--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,8 @@
-import psycopg2
-import pandas as pd
-import plotly.express as px
-import datetime as dt
-import streamlit as sl
-import geopandas as gpd
-import numpy as np
-import base64 as base64
+psycopg2
+pandas 
+plotly.express
+datetime
+streamlit
+geopandas
+numpy
+base64
